--- a/introduction-to-r.html
+++ b/introduction-to-r.html
@@ -122,7 +122,7 @@ R has far the best **graphical tools** to create your charts, and with **shiny**
 
 ## Why R? - Some examples
 
-A COVID tracker **written in R** (shiny, leaflet)
+[A COVID tracker **written in R** (shiny, leaflet)](https://vac-lshtm.shinyapps.io/ncov_tracker/?_ga=2.146567862.383333130.1662737117-60780019.1662551588)
 
 
 &lt;iframe src="https://vac-lshtm.shinyapps.io/ncov_tracker/?_ga=2.146567862.383333130.1662737117-60780019.1662551588" width="100%" height="400px" data-external="1"&gt;&lt;/iframe&gt;
@@ -130,6 +130,29 @@ A COVID tracker **written in R** (shiny, leaflet)
 ???
 
 source: https://shiny.rstudio.com/gallery/covid19-tracker.html
+
+---
+
+## Why R? - Some examples
+
+[Real-time epidemiology of the Hungarian coronavirus epidemic (Tamás Ferenci)](https://research.physcon.uni-obuda.hu/COVID19MagyarEpi/)
+
+&lt;iframe src="https://research.physcon.uni-obuda.hu/COVID19MagyarEpi/?showcase=0" width="100%" height="400px" data-external="1"&gt;&lt;/iframe&gt;
+
+---
+
+## Why R? - Some examples
+
+.blue[Data import &amp; complex visualization in 10 minutes]
+
+.pull-left[
+
+![](introduction-to-r_files/demograph-behind.gif)&lt;!-- --&gt;
+]
+
+.pull-right[
+![](introduction-to-r_files/demography.gif)&lt;!-- --&gt;
+]
 
 
 ---
@@ -139,7 +162,8 @@ source: https://shiny.rstudio.com/gallery/covid19-tracker.html
 You can download R and RStudio from the official site of [RStudio](https://www.rstudio.com/products/rstudio/download/#download).
 Please install the appropriate version based on your OS, and do not forget that you also have to install R as well.
 
-![Install R: step 1.](introduction-to-r_files/installr.jpg)
+&lt;img src="introduction-to-r_files/installr.png" width="2915" /&gt;
+
 
 ---
 
@@ -267,21 +291,37 @@ class: middle, center, inverse
 
 ## Data types
 
+## Numeric
+
 Lets see first, what kind of datatypes exist in R. Lets assign a variable called `x`.
 
 
+```r
+x &lt;- 4
+```
 
 So, what is the type of `x`? We can use the `class` command to answer this.
 
+
+```r
+class(x)
+```
 
 ```
 ## [1] "numeric"
 ```
 
-Its numeric^[Integer and double also exist in R, but these are not the default, and variables will be always coerced automatically]. This means that you can use `+`, `-`, `*` operators on it.
+Its numeric. This means that you can use `+`, `-`, `*` operators on it. (Integer and double also exist in R, but these are not the default, and variables will be always coerced automatically.)
 
-Lets see other types.
+---
 
+## Character
+
+
+```r
+y &lt;- "blue"
+class(y)
+```
 
 ```
 ## [1] "character"
@@ -289,6 +329,13 @@ Lets see other types.
 
 Its a character, basically can contain any kind of letter, digits, or white space.
 
+## Logical
+
+
+```r
+does_it_rain &lt;- TRUE
+class(does_it_rain)
+```
 
 ```
 ## [1] "logical"
@@ -296,10 +343,17 @@ Its a character, basically can contain any kind of letter, digits, or white spac
 
 Its a logical value. It can be `TRUE` or `FALSE`
 
-### vectors
+---
+
+# Vectors
 
 We can create a vector with the `c` function. (combine)
 
+
+```r
+x &lt;- c(11, 201, 301)
+x
+```
 
 ```
 ## [1]  11 201 301
@@ -308,27 +362,48 @@ We can create a vector with the `c` function. (combine)
 We can asses a given element of it by:
 
 
+```r
+x[2]
+```
+
 ```
 ## [1] 201
 ```
 
-Or we can use functions on it:
+Or you can use functions on it:
 
+
+```r
+sum(x)
+```
 
 ```
 ## [1] 513
 ```
 
-We can also easily create sequence with the syntax `start:stop`
+You can also easily create sequence with the syntax `start:stop`
 
+
+```r
+1:10
+```
 
 ```
 ##  [1]  1  2  3  4  5  6  7  8  9 10
 ```
 
-If we combine characters, I mentiont that we can convert this vector to **factor** type. This is useful if we can enclose an order to the vector or we want to control for the possible values.
-Lets see a minimal example
+---
 
+# Factors
+
+If you combine characters, you can convert this vector to **factor** type. This is useful if we can enclose an order to the vector or we want to control for the possible values.
+Lets see a minimal example:
+
+
+```r
+my_vector &lt;- c("First", "Second", "Third", "Fourth")
+sort(my_vector)
+```
 
 ```
 ## [1] "First"  "Fourth" "Second" "Third"
