--- a/introduction-to-r.html
+++ b/introduction-to-r.html
@@ -52,20 +52,20 @@ a { color: #378C95; font-weight: bold; }
 .caption { color: #378C95; font-style: italic; text-align: center; }
 
 .content-box { 
-    box-sizing: content-box;
-    	background-color: #378C95;
-  /* Total width: 160px + (2 * 20px) + (2 * 8px) = 216px
-     Total height: 80px + (2 * 20px) + (2 * 8px) = 136px
-     Content box width: 160px
-     Content box height: 80px */
+box-sizing: content-box;
+background-color: #378C95;
+/* Total width: 160px + (2 * 20px) + (2 * 8px) = 216px
+Total height: 80px + (2 * 20px) + (2 * 8px) = 136px
+Content box width: 160px
+Content box height: 80px */
 }
 
 .content-box-green {
-	background-color: #d9edc2;
+background-color: #d9edc2;
 }
 
 .content-box-red {
-	background-color: #f9dbdb;
+background-color: #f9dbdb;
 }
 
 &lt;/style&gt;
@@ -145,14 +145,8 @@ source: https://shiny.rstudio.com/gallery/covid19-tracker.html
 
 .blue[Data import &amp; complex visualization in 10 minutes]
 
-.pull-left[
-
 ![](introduction-to-r_files/demograph-behind.gif)&lt;!-- --&gt;
-]
 
-.pull-right[
-![](introduction-to-r_files/demography.gif)&lt;!-- --&gt;
-]
 
 
 ---
@@ -372,6 +366,7 @@ x[2]
 
 Or you can use functions on it:
 
+.pull-left[
 
 ```r
 sum(x)
@@ -380,6 +375,22 @@ sum(x)
 ```
 ## [1] 513
 ```
+]
+
+.pull-right[
+
+```r
+x + 2
+```
+
+```
+## [1]  13 203 303
+```
+]
+
+---
+
+## Creating vectors (sequences)
 
 You can also easily create sequence with the syntax `start:stop`
 
@@ -392,162 +403,293 @@ You can also easily create sequence with the syntax `start:stop`
 ##  [1]  1  2  3  4  5  6  7  8  9 10
 ```
 
+--
+
+Or with the `seq` function
+
+
+```r
+seq(from = 2, to = 10, by = 2)
+```
+
+```
+## [1]  2  4  6  8 10
+```
+
+
+```r
+seq(from = 3, to = 53, length.out = 11)
+```
+
+```
+##  [1]  3  8 13 18 23 28 33 38 43 48 53
+```
+
+.pull-left[
+
+```r
+x
+```
+
+```
+## [1]  11 201 301
+```
+]
+
+.pull-right[
+
+```r
+seq_along(x)
+```
+
+```
+## [1] 1 2 3
+```
+]
+
+
 ---
 
 # Factors
 
-If you combine characters, you can convert this vector to **factor** type. This is useful if we can enclose an order to the vector or we want to control for the possible values.
+If you combine characters, you can convert this vector to factor type. This is useful if you want to sort the possible values into a given order, or specify which values should be accepted and which should be omitted.
+
 Lets see a minimal example:
 
 
 ```r
-my_vector &lt;- c("First", "Second", "Third", "Fourth")
+my_vector &lt;- c("XL", "M", "L", "S", "L", "other")
 sort(my_vector)
 ```
 
 ```
-## [1] "First"  "Fourth" "Second" "Third"
+## [1] "L"     "L"     "M"     "other" "S"     "XL"
 ```
 
-If we want to sort the vector, we see that *Fourth* comes right after *First*. It is because character vectors are sorted in alphabetical order. We can solve it with `factor`
 
+```r
+my_vector2 &lt;- factor(my_vector, 
+                     ordered = TRUE, 
+                     levels = c("XS", "S", "M", "L", "XL")
+)
 
-```
-## [1] First  Second Third  Fourth
-## Levels: First &lt; Second &lt; Third &lt; Fourth
-```
-
-We can merge these vectors into a data.frame, which is basically like an excel table. Each column is a variable (with a header), and each row is an observation.
-
-
-```
-##              name color
-## 1 Captain America  blue
-## 2            Hulk green
-## 3     Dr. Strange  &lt;NA&gt;
-```
-
-NA stands for "not applicable", so these values are missing. Most of the times we will work with data.frames (similarly like pandas in python), so it is the most important data type we learn.
-
-Storing more complex data, you can use the `list`. To use `data.frame` you need vectors with equal length. If this does not hold, or a more frequent case, you want to store a collection of data.frames, then `list` is a perfect solution! It is not a rare issue, big panel dataset are usually stored in separated files (a different file to each year, like: `cis_survey2016.csv`, `cis_survey2017.csv`). In this situations its suggested to store your data in a list.
-
-
-
-Now `mylist` stores a data.frame and two vector. You can access the components with a `[[ ]]`. For example, the first element:
-
-
-```
-##              name color
-## 1 Captain America  blue
-## 2            Hulk green
-## 3     Dr. Strange  &lt;NA&gt;
-```
-
-## Data manipulation
-
-### Import data into R {#data-import}
-
-We mentioned formely that the easiest way to import your data is to click on it in the files pane. However, this manual step is useful if you have to import and analyse the data once, but probably you want to use your data next time as well. That is way it is a good idea to copy and paste the code for importing the data into your script.
-
-![Import csv data into R](introduction-to-r_files/importcsv.gif)
-
-In fact, if the data is in your working directory, you can refer to it with "**relative referencing**". This means that you have to type only the name of the file, not the full path, because R will automatically start to look for the file in the working directory^[you can download this example dataset from the GitHub page of this bookdown].
-
-
-Now we have imported a tidy dataset. Each column is variable, and each row is an observation. Lets see how to select specific data from that. If you want to analyse only one column of it, you can use `$` operator.
-
-
-
-The output `pizza` is a character vector currently, because some of the answers contain letters. We have to options here:
-
-1. Using `as.numeric` function to force R using the values as numerical data.
-
-
-We got a warning message. Where letters appear R cannot convert the values to numbers, so this values became NA (Not Available) values.
-
-2. Remove the letters from the answers and convert the vector to the correct datatype.
-
-To manage this, we have to use the syntax called **regular expressions**. I want to show you 4 expressions now and a function. The function `gsub` will detect a given letter in a character and replace it with something. Lets see how!
-
-
-```
-## [1] "BBBBBBB BB"
+sort(my_vector2)
 ```
 
 ```
-## [1] "AwesomeB12"
+## [1] S  M  L  L  XL
+## Levels: XS &lt; S &lt; M &lt; L &lt; XL
+```
+
+---
+
+# Data Frame
+
+You can merge the vectors into a `data.frame`, which is simple a **table**. Each column is a *variable* (with a header), and each row is an *observation*.
+
+
+```
+##   id            name        species
+## 1  1 Captain America          human
+## 2  2            Hulk           &lt;NA&gt;
+## 3  3           Groot Flora colossus
+## 4  4         Strange          human
+```
+
+`NA` stands for "not applicable", so these values are missing. Most of the times you will work with data.frame, so it is the most important type.
+
+---
+
+# List
+
+Storing more complex data, you can use the `list`. To use `data.frame` you need vectors with equal length. If this does not hold, or a more frequent case, you want to store a collection of data.frames, then `list` is a perfect solution! It is not a rare issue*, big panel dataset are usually stored in separated files (a different file to each year, like: `cis_survey2016.csv`, `cis_survey2017.csv`). In this situations its suggested to store your data in a list.
+
+
+```r
+mylist &lt;- list(avengers_df, my_vector, x)
+```
+
+Now `mylist` stores a data.frame and two vectors. You can access the elements by `[[ ]]`. For example, the 2nd element:
+
+
+```r
+mylist[[2]]
 ```
 
 ```
-## [1] "Awesome BB"
+## [1] "XL"    "M"     "L"     "S"     "L"     "other"
 ```
 
+.footnote[\*: *In the case of multiple models, we will also store them in a list, but more on that later*]
+
+---
+
+# Import data into R
+
+The easiest way to import your data is to click on it in the files pane. This simple solution works if you have to import and analyse the data once, but probably you want to use your data next time as well. That is way it is a good idea to copy and paste the code for importing the data into your script (delete the `View()` command after that).
+
+&lt;img src="introduction-to-r_files/importcsv.gif" height="400px" /&gt;
+
+---
+
+## Path to your files
+
+If the data is in your working directory, you can refer to it with "**relative referencing**". This means that you have to type only the name of the file, not the full path, because R will automatically start to look for the file in the working directory.
+
+--
+
+.content-box-green[
+That is the reason why you should always set a `project`* to your work.
+]
+
+.footnote[\* *A git <svg aria-hidden="true" role="img" viewBox="0 0 496 512" style="height:1em;width:0.97em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg> repo is more recommended, but it is not part of the current course.*]
+
+--
+
+.content-box-green[
+HINT: You can type `""` anywhere in the source/console pane and hit `TAB` to completions to the files.
+]
+
+--
+
+.content-box-green[
+HINT: `list.files()` returns the name and path of the files in your current working directory.
+]
+
+
+#### Online data?
+
+If the file you want to import was previously downloaded from a website, you can simply refer to the download **link** and **read it into R directly**. For this you have to only modify the path of the file to the download link what is available at the `download` folder in your browser.
+
+---
+
+# Conditional statements
+
+We offen use conditional statement in programming. It has a clean concept: *If the condition is TRUE, then evaluate the following task.*
+
+
+&lt;p align="center"&gt;&lt;iframe width="711" height="400" src="https://www.youtube.com/embed/m2Ux2PnJe6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen&gt;&lt;/iframe&gt;&lt;/p&gt;
+
+---
+
+# Snippets
+
+If you want to write an if else statement in R, I highly recommend you to use the **snippet** for that. Snippet means, that when you type `if` and press `shift + tab`, then R will automatically write the framework you have to use:
+
+![](introduction-to-r_files/snippet.gif)&lt;!-- --&gt;
+
+---
+
+# Logical Operators in R
+
+.pull-left[
+
+
+```r
+4 &lt; 5
 ```
-## [1] "BBBBBBBB12"
-```
-
-So we can use the last example to solve our problem. 
-
-
-## Conditional statements
-
-We offen use conditional statement in programming. It has a clean concept: **If the condition is TRUE, then evaluate the following task.**
-
-&lt;iframe width="560" height="315" src="https://www.youtube.com/embed/m2Ux2PnJe6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen&gt;&lt;/iframe&gt;
-
-If you want to write an if else statement in R, I highly recomment you to use the snippet for that. Snippet means, that when you type `if` and press `shift + tab`, then R will automaticly write the framework you have to use:
-
-
-
-As a condition you have to use a logical value as input, or a condition. You can use conditions with the following operators: `&lt;`, `&gt;`, `&lt;=`, `&gt;=`, `==`, `!=`, `is.na`, `%in%`, `stringr::str_detect()`.
-
 
 ```
 ## [1] TRUE
 ```
 
+```r
+5 &lt;= 5
+```
+
 ```
 ## [1] TRUE
+```
+
+```r
+4 &gt; 5
+```
+
+```
+## [1] FALSE
+```
+]
+
+.pull-right[
+
+
+```r
+5 &gt;=4
+```
+
+```
+## [1] TRUE
+```
+
+```r
+2 == 3 # equal?
 ```
 
 ```
 ## [1] FALSE
 ```
 
+```r
+3 != 3 # not equal?
+```
+
+```
+## [1] FALSE
+```
+]
+
+&lt;img src="introduction-to-r_files/meme_false.png" width="300px" height="200px" style="display: block; margin: auto;" /&gt;
+
+
+???
+
+source: https://www.instagram.com/p/CiEXTeRodhj/
+
+---
+
+
+```r
+(2 + 2) == 4
+```
+
 ```
 ## [1] TRUE
+```
+
+```r
+is.na(4)
 ```
 
 ```
 ## [1] FALSE
 ```
 
-```
-## [1] TRUE
-```
-
-```
-## [1] FALSE
-```
-
-```
-## [1] FALSE
-```
-
-```
-## [1] FALSE
+```r
+is.na(NA)
 ```
 
 ```
 ## [1] TRUE
 ```
 
-```
-## [1] TRUE
+```r
+3 %in% c(1, 2, 3)
 ```
 
 ```
 ## [1] TRUE
+```
+
+```r
+stringr::str_detect(string = "this function is awesome!", pattern = "some")
+```
+
+```
+## [1] TRUE
+```
+
+```r
+stringr::str_detect(string = "this function is awesome!", pattern = "none")
 ```
 
 ```
@@ -628,8 +770,8 @@ We offen work with functions in R, but you can also write your own. You have to 
 This family contains 3 functions, which I want to show you (There are more complex ones, those are not covered in this bookdown). 
 
 The function `apply` tells R to use a function on each row or column of a data.frame. So the its frist argument is the `data.frame`, the third is the function which shoul use and the second is the margin:
-    - margin = 2: apply the given function on each of the COLUMNS
-    - margin = 1: apply the given function on each of the ROWS
+- margin = 2: apply the given function on each of the COLUMNS
+- margin = 1: apply the given function on each of the ROWS
 
 
 
