--- a/course-outline.html
+++ b/course-outline.html
@@ -80,6 +80,51 @@ The main materials are **lecture slides** that are uploaded at the latest a day 
 
 ---
 
+class: middle, center
+
+# Agenda
+
+&lt;img src="course-outline_files/tidy-workflow/Dia1.png" width="960" /&gt;
+
+
+---
+
+class: middle, center
+
+# Agenda
+
+&lt;img src="course-outline_files/tidy-workflow/Dia2.png" width="960" /&gt;
+
+
+---
+
+class: middle, center
+
+# Agenda
+
+&lt;img src="course-outline_files/tidy-workflow/Dia3.png" width="960" /&gt;
+
+
+---
+
+class: middle, center
+
+# Agenda
+
+&lt;img src="course-outline_files/tidy-workflow/Dia4.png" width="960" /&gt;
+
+
+---
+
+class: middle, center
+
+# Agenda
+
+&lt;img src="course-outline_files/tidy-workflow/Dia5.png" width="960" /&gt;
+
+---
+
+
 # About your teacher
 
 - Marcell Granát, [granat.marcell@uni-neumann.hu](mailto:granat.marcell@uni-neumann.hu)
