--- a/introduction-to-statistics.html
+++ b/introduction-to-statistics.html
@@ -310,7 +310,7 @@ Frequently arising issues:
 
 ---
 
-## An illlustrative story of data-related issues
+## An illustrative story of data-related issues
 
 .blue[Statistician:] So, you got the data for all the patients?
 
@@ -328,7 +328,7 @@ Frequently arising issues:
 
 ---
 
-## An illlustrative story of data-related issues
+## An illustrative story of data-related issues
 
 .blue[Statistician:] But surely you heard about what happened to field 4? It's supposed to be measured on a scale from 1 to 10, with 0 indicating a missing value, but because of a data entry error, all 10's were changed into 0's. Unfortunately, since some of the patients have missing values for this field, it's impossible to say whether a 0 in this field is a real 0 or a 10. Quite a few of the records have that problem.
 
@@ -344,7 +344,7 @@ Frequently arising issues:
 
 ---
 
-## An illlustrative story of data-related issues
+## An illustrative story of data-related issues
 
 .blue[Statistician:] What? Field 1 is just an identification number. 
 
@@ -390,11 +390,11 @@ class: inverse, center, middle
 
 `$$\bar{Y}=\frac{Y_1+Y_2+\ldots+Y_N}{N}=\frac{\sum_{i=1}^N Y_i}{N}$$`
 
-Total sum of differences among the mean and the observations is zero
+The total sum of differences between the mean and the observations is zero
 
 `$$\sum\left(Y_i-\bar{Y}\right)=0$$`
 
-The total squared sum of differences among a given value and the observations reaches its minimum, if this number is mean
+The total squared sum of differences among a given value and the observations reaches its minimum if this number is mean
 
 `$$\sum\left(Y_i-A\right)^2=\text{min if }A=\bar{Y}$$`
 
@@ -410,14 +410,14 @@ And if `\(L_i=A+BY_i\)` and `\(B\neq0\)`, then
 
 The average can also be interpreted as meaning that if all elements were replaced by this value, the sum of the elements would remain the same.
 
-Lets see the case of indexes:
+Let us see the case of indexes:
 
 The GDP growth in one year was 5 percent and 5 percent in the following and 10 percent in the 3rd. 
 
 What was the total growth in the 3 years? 
 
 `$$1.05 \times 1.05 \times 1.10 = 1.21$$`
-However, arithmetic mean equals 20/3.
+However, the arithmetic mean equals 20/3.
 
 **Use geometric mean if you are working with indexes!**
 
@@ -529,7 +529,7 @@ class: inverse, middle, center
 
 ## Standard deviation
 
-The average difference among the observations and the mean (?)
+The average difference between the observations and the mean (?)
 
 --
 
@@ -551,7 +551,7 @@ HINT: Most of the time, when we see squaring and rooting at the same time, the p
 
 ## Variance
 
-Variance is simple the square of standard deviation.
+Variance is simply the square of standard deviation.
 
 `$$\sigma^2=\frac{\sum_{i=1}^N\left(Y_i-\bar{Y}\right)^2}{N}$$`
 
