--- a/introduction-to-statistics.html
+++ b/introduction-to-statistics.html
@@ -472,11 +472,11 @@ Yeah. We will come back to this soon...
 
 class: inverse, middle, center
 
-## Quartile
+## Quantile
 
 ---
 
-# Quartile
+# Quantile
 
 Values that divide the observations into equal groups.
 
@@ -493,7 +493,7 @@ Values that divide the observations into equal groups.
 
 ---
 
-# Quartile
+# Quantile
 
 ### Lets take the following sequence:
 
@@ -507,7 +507,7 @@ Values that divide the observations into equal groups.
 
 --
 
-### Step 2. Find the values. 😆
+### Step 2. Find the values. 🤣
 
 --
 
